--- a/website/docs/language/settings/backends/gcs.mdx
+++ b/website/docs/language/settings/backends/gcs.mdx
@@ -103,6 +103,11 @@ The following configuration options are supported:
 - `prefix` - (Optional) GCS prefix inside the bucket. Named states for
   workspaces are stored in an object called `<prefix>/<name>.tfstate`.
 - `encryption_key` / `GOOGLE_ENCRYPTION_KEY` - (Optional) A 32 byte base64
-  encoded 'customer supplied encryption key' used to encrypt all state. For
-  more information see [Customer Supplied Encryption
-  Keys](https://cloud.google.com/storage/docs/encryption#customer-supplied).
+  encoded 'customer-supplied encryption key' used when reading and writing state files in the bucket. For
+  more information see [Customer-supplied Encryption
+  Keys](https://cloud.google.com/storage/docs/encryption/customer-supplied-keys).
+- `kms_encryption_key` / `GOOGLE_KMS_ENCRYPTION_KEY` - (Optional) A Cloud KMS key ('customer-managed encryption key')
+  used when reading and writing state files in the bucket.
+  Format should be `projects/{{project}}/locations/{{location}}/keyRings/{{keyRing}}/cryptoKeys/{{name}}`. 
+  For more information see [Customer-managed Encryption 
+  Keys](https://cloud.google.com/storage/docs/encryption/customer-managed-keys).
