--- a/website/docs/cli/install/yum.mdx
+++ b/website/docs/cli/install/yum.mdx
@@ -58,12 +58,10 @@ yum install terraform
 
 ## Supported Architectures
 
-The HashiCorp Yum/DNF server currently has packages only for the `x86_64`
-architecture, which is also sometimes known as `amd64`.
-
-There are no official packages available for other architectures, such as
-`aarch64`. If you wish to use Terraform on a non-`x86_64` system,
-[download a normal release `.zip` file](/downloads) instead.
+You can [download a `.zip` file](/downloads) from the The HashiCorp Yum/DNF server for the following packages:
+* The `x86_64` architecture, which is also sometimes known as `amd64`
+* The `arm` architecture
+* The `arm64` architecture
 
 ## Supported Distribution Releases
 
