--- a/website/docs/language/settings/backends/gcs.mdx
+++ b/website/docs/language/settings/backends/gcs.mdx
@@ -73,6 +73,28 @@ the path of the service account key. Terraform will use that key for authenticat
 
 Terraform can impersonate a Google Service Account as described [here](https://cloud.google.com/iam/docs/creating-short-lived-service-account-credentials). A valid credential must be provided as mentioned in the earlier section and that identity must have the `roles/iam.serviceAccountTokenCreator` role on the service account you are impersonating.
 
+## Encryption
+
+!> **Warning:** Take care of your encryption keys, as any state data encrypted with a lost or deleted key will not be recoverable. If you use customer-supplied encryption keys you must securely manage your keys and ensure that they are not lost. Customer-managed encryption keys in Cloud KMS used to encrypt state must not be deleted, but if this is done accidentally there is a time window where [they can be recovered](https://cloud.google.com/kms/docs/destroy-restore#restore).
+
+### Customer-supplied encryption keys
+
+To get started, follow this guide: [Use customer-supplied encryption keys](https://cloud.google.com/storage/docs/encryption/using-customer-supplied-keys)
+
+If you want to remove customer-supplied keys from your backend configuration, or change to a different customer-supplied key, Terraform cannot perform a state migration automatically and manual intervention is needed instead. This is because customer-supplied encryption keys are not stored by Google, so they must be supplied in any requests sent to the Cloud Storage API (see [Customer-supplied Encryption Keys](https://cloud.google.com/storage/docs/encryption/customer-supplied-keys)). At the time of state migration, the old key's details are removed from the backend configuration and Terraform cannot use the key during the migration process.
+
+~> **Important:** To migrate your state away from using customer-supplied encryption keys, or change the key used by your backend, you will need to perform a [rewrite (gsutil CLI)](https://cloud.google.com/storage/docs/gsutil/commands/rewrite) or [cp (gcloud CLI)](https://cloud.google.com/sdk/gcloud/reference/storage/cp#--decryption-keys) operation to remove use of the old customer-supplied encryption key on your state file. Once the encryption is removed you can successfully run `terraform init -migrate-state` with your new backend configuration.
+
+### Customer-managed encryption keys (Cloud KMS)
+
+To get started, follow this guide: [Use customer-managed encryption keys](https://cloud.google.com/storage/docs/encryption/using-customer-managed-keys)
+
+If you want to remove customer-managed keys from your backend configuration, or change to a different customer-managed key, Terraform _can_ manage a state migration without manual intervention. This is because customer-managed encryption keys are stored in GCP and are accessible during the state migration process. However, these changes do not fully come into effect until the first write operation is performed on the state file after state migration occurs. In the first write operation after state migration the file will be decrypted with the old key and then written with the new encryption method. This is equivalent to the [rewrite](https://cloud.google.com/storage/docs/gsutil/commands/rewrite) operation described in the customer-supplied encryption keys section above. Because of the importance of the first write to state after state migration, you should not delete old KMS keys until any state file(s) encrypted with that key have been updated.
+
+Customer-managed keys do not need to be sent in requests to read files from GCS buckets, as decryption is handled automatically within GCS. This means that if you use the `terraform_remote_state` [data source](https://www.terraform.io/language/state/remote-state-data) to access KMS-encrypted state you do not need to specify the KMS key in the data source's `config` object. 
+
+~> **Important:** To use customer-managed encryption keys, you will need to create a key and give your project's GCS service agent permission to use it with the Cloud KMS CryptoKey Encrypter/Decrypter predefined role. 
+
 ## Configuration Variables
 
 !> **Warning:**  We recommend using environment variables to supply credentials and other sensitive data. If you use `-backend-config` or hardcode these values directly in your configuration, Terraform will include these values in both the `.terraform` subdirectory and in plan files. Refer to [Credentials and Sensitive Data](/language/settings/backends/configuration#credentials-and-sensitive-data) for details.
@@ -86,7 +108,7 @@ The following configuration options are supported:
   (Optional) Local path to Google Cloud Platform account credentials in JSON
   format.  If unset, [Google Application Default
   Credentials](https://developers.google.com/identity/protocols/application-default-credentials)
-  are used.  The provided credentials must have Storage Object Admin role on the bucket.
+  are used.  The provided credentials must have the Storage Object Admin role on the bucket.
   **Warning**: if using the Google Cloud Platform provider as well, it will
   also pick up the `GOOGLE_CREDENTIALS` environment variable.
 - `impersonate_service_account` - (Optional) The service account to impersonate for accessing the State Bucket.
@@ -109,5 +131,5 @@ The following configuration options are supported:
 - `kms_encryption_key` / `GOOGLE_KMS_ENCRYPTION_KEY` - (Optional) A Cloud KMS key ('customer-managed encryption key')
   used when reading and writing state files in the bucket.
   Format should be `projects/{{project}}/locations/{{location}}/keyRings/{{keyRing}}/cryptoKeys/{{name}}`. 
-  For more information see [Customer-managed Encryption 
+  For more information, including IAM requirements, see [Customer-managed Encryption 
   Keys](https://cloud.google.com/storage/docs/encryption/customer-managed-keys).
