--- a/website/docs/language/settings/backends/gcs.mdx
+++ b/website/docs/language/settings/backends/gcs.mdx
@@ -106,9 +106,7 @@ The following configuration options are supported:
   Guidelines](https://cloud.google.com/storage/docs/bucketnaming.html#requirements).
 - `credentials` / `GOOGLE_BACKEND_CREDENTIALS` / `GOOGLE_CREDENTIALS` -
   (Optional) Local path to Google Cloud Platform account credentials in JSON
-  format.  If unset, [Google Application Default
-  Credentials](https://developers.google.com/identity/protocols/application-default-credentials)
-  are used.  The provided credentials must have the Storage Object Admin role on the bucket.
+  format. If unset, the path uses [Google Application Default Credentials](https://developers.google.com/identity/protocols/application-default-credentials).  The provided credentials must have the Storage Object Admin role on the bucket.
   **Warning**: if using the Google Cloud Platform provider as well, it will
   also pick up the `GOOGLE_CREDENTIALS` environment variable.
 - `impersonate_service_account` - (Optional) The service account to impersonate for accessing the State Bucket.
