--- a/website/docs/language/settings/backends/gcs.mdx
+++ b/website/docs/language/settings/backends/gcs.mdx
@@ -2,7 +2,7 @@
 page_title: 'Backend Type: gcs'
 description: >-
   Terraform can store the state remotely, making it easier to version and work
-  with in a team.
+  within a team.
 ---
 
 # gcs
@@ -16,37 +16,41 @@ This backend supports [state locking](/language/state/locking).
 [Object Versioning](https://cloud.google.com/storage/docs/object-versioning)
 on the GCS bucket to allow for state recovery in the case of accidental deletions and human error.
 
-## Example Configuration
+## Set up the data source
 
 ```hcl
 terraform {
   backend "gcs" {
-    bucket  = "tf-state-prod"
-    prefix  = "terraform/state"
+    bucket = "tf-state-prod"
+    prefix = "terraform/state"
   }
+}
+
+output "greeting" {
+  value = "Hello, world!"
 }
 ```
 
-## Data Source Configuration
+## Reference the data source
 
 ```hcl
-data "terraform_remote_state" "foo" {
+data "terraform_remote_state" "my_remote_state" {
   backend = "gcs"
   config = {
-    bucket  = "terraform-state"
-    prefix  = "prod"
+    bucket = "tf-state-prod"
+    prefix = "terraform/state"
   }
 }
 
 # Terraform >= 0.12
-resource "local_file" "foo" {
-  content  = data.terraform_remote_state.foo.outputs.greeting
+resource "local_file" "my_local_file" {
+  content  = data.terraform_remote_state.my_remote_state.outputs.greeting
   filename = "${path.module}/outputs.txt"
 }
 
 # Terraform <= 0.11
-resource "local_file" "foo" {
-  content  = "${data.terraform_remote_state.foo.greeting}"
+resource "local_file" "my_local_file" {
+  content  = "${data.terraform_remote_state.my_remote_state.greeting}"
   filename = "${path.module}/outputs.txt"
 }
 ```
