Adding provider constraint best practice
Originally communicated here, this statement is missing in newer docs.

https://developer.hashicorp.com/terraform/language/v1.1.x/configuration-0-11/providers?ajs_aid=3cf1bdca-a598-4dc5-b074-6064b276abb6&_gl=1*xuizrx*_ga*MTM1ODg4NTcyMi4xNjY2MTA5NjI1*_ga_P7S46ZYEKW*MTY3NjU2OTMzNS4zMi4wLjE2NzY1Njk0MDMuMC4wLjA.&product_intent=terraform#provider-versions

--- a/website/docs/language/providers/index.mdx
+++ b/website/docs/language/providers/index.mdx
@@ -55,6 +55,8 @@ see the [provider publishing documentation](/registry/providers/docs).
 
 ## How to Use Providers
 
+Providers are released on a separate rhythm from Terraform itself, and thus have their own version numbers. For production use, it is recommended to constrain the acceptable provider versions by pinning it via configuration, to ensure that new versions with breaking changes will not be automatically installed by `terraform init` in the future.
+
 To use resources from a given provider, you need to include some information
 about it in your configuration. See the following pages for details:
 
