backport of commit 5c0310c18bd408e34a93a8177e7cdb747db75bb9

--- a/website/docs/internals/functions-meta.mdx
+++ b/website/docs/internals/functions-meta.mdx
@@ -5,7 +5,7 @@ description: >-
   functions available in the current Terraform version.
 ---
 
-# Command: terraform metadata functions
+# Functions Metadata
 
 The `terraform metadata functions` command is used to print signatures for the functions available in the current Terraform version.
 
