--- a/website/docs/language/functions/list.mdx
+++ b/website/docs/language/functions/list.mdx
@@ -12,7 +12,7 @@ but Terraform v0.12 introduced a new first-class syntax.
 To update an expression like `list(a, b, c)`, write the following instead:
 
 ```
-tolist([a, b, c])
+tolist(["a", "b", "c"])
 ```
 
 The `[ ... ]` brackets construct a tuple value, and then the `tolist` function
